# json-playground

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/: HACKING.md
source/: lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt
test/source/: json-playground_test.cpp
